# p2w

./: .gitignore  .pre-commit-config.yaml  CHANGES.md  LICENSE  Makefile  README.md  noxfile.py  pyproject.toml  ruff.toml
.builds/: alpine.yml  ubuntu-2404.yml
demos/: readme.md
demos/data-dashboard/: Makefile  app.py  index.html
demos/simulation/: Makefile  app.py  index.html  loader.js
docs/: architecture.md  js-interop.md  known-bugs.md  lessons-learned.md
docs/diagrams/: pipeline.mmd
programs/benchmarks/: binarytrees.py  fannkuch.py  fannkuch_native.py  fasta.py  fibonacci.py  fibonacci_boxed.py  fibonacci_native.py  mandelbrot.py  mandelbrot_native.py  matmul.py  matmul_native.py  nbody.py  primes.py  primes_native.py  pystone.py  run_benchmarks.py  sieve.py  sieve_native.py  spectralnorm.py
programs/benchmarks-alioth/: README.md  programs  run_benchmarks.py  suite.yaml
programs/internal/: assert_statements.py  boolean_logic.py  boolean_none.py  builtin_functions.py  builtins_extended.py  builtins_introspection.py  builtins_iteration_simple.py  builtins_iteration_tools.py  builtins_map_filter_edge.py  builtins_map_filter_simple.py  builtins_numeric_extra.py  builtins_numeric_simple.py  builtins_string_conversions.py  bytes_encoding.py  bytes_literals.py  bytes_methods.py  chained_assignment.py  chained_calls.py  class.py  class_advanced.py  class_hierarchy.py  class_inherit_super.py  class_property.py  class_property_basic.py  class_special_methods.py  class_staticclassmethod.py  class_super.py  closures_nested.py  comparison_types.py  control_flow.py  (+70 more)
(+107 files in other folders)
